--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,6 +1,5 @@
 {% set name = "flask-swagger" %}
 {% set version = "0.2.14" %}
-{% set sha256 = "b4085f5bc36df4c20b6548cd1413adc9cf35719b0f0695367cd542065145294d" %}
 
 package:
   name: {{ name|lower }}
@@ -9,7 +8,7 @@ package:
 source:
   fn: {{ name }}-{{ version }}.tar.gz
   url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.tar.gz
-  sha256: {{ sha256 }}
+  sha256: b4085f5bc36df4c20b6548cd1413adc9cf35719b0f0695367cd542065145294d
 
 build:
   noarch: python
@@ -27,7 +26,7 @@ requirements:
   run:
     - python
     - flask >=0.10
-    - pyyaml >=3.0
+    - pyyaml >=5.1
 
 test:
   commands:
